--- a/src/main/java/sample/sample.fxml
+++ b/src/main/java/sample/sample.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.Double?>
 <?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,6 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -18,14 +21,15 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="37.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="2" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of cards : 0" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1 : Name" />
+            <Text fx:id="textScorePlayer0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font size="24.0" />
+               </font></Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1" />
          </children>
       </GridPane>
       <GridPane fx:id="HandPlayer1" layoutX="14.0" layoutY="587.0" prefHeight="119.0" prefWidth="1258.0" styleClass="hand">
@@ -365,20 +369,66 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="37.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="2" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of cards : 0" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1 : Name" />
+            <Text fx:id="textScorePlayer1" strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font size="24.0" />
+               </font></Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2" />
          </children>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </GridPane>
       <ImageView fx:id="AnimationView" fitHeight="90.0" fitWidth="70.0" layoutX="0" layoutY="0" pickOnBounds="true" visible="false" x="625.0" y="375.0">
          <image>
             <Image url="@../yugioh_reverse.png" />
          </image>
       </ImageView>
+      <Polygon fx:id="FramePlayer0" fill="#ffffff00" layoutX="10" layoutY="10" stroke="#8d8787" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="3.0">
+        <points>
+          <Double fx:value="0.0" />
+          <Double fx:value="0.0" />
+          <Double fx:value="1265.0" />
+          <Double fx:value="0.0" />
+          <Double fx:value="1265.0" />
+          <Double fx:value="260.0" />
+          <Double fx:value="500.0" />
+          <Double fx:value="260.0" />
+          <Double fx:value="500.0" />
+          <Double fx:value="400.0" />
+          <Double fx:value="0.0" />
+          <Double fx:value="400.0" />
+        </points>
+      </Polygon>
+       <Polygon fx:id="FramePlayer1" fill="#ffffff00" layoutX="1275" layoutY="715" stroke="#8d8787" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="3.0">
+           <points>
+               <Double fx:value="0.0" />
+               <Double fx:value="0.0" />
+               <Double fx:value="-1265.0" />
+               <Double fx:value="0.0" />
+               <Double fx:value="-1265.0" />
+               <Double fx:value="-243.0" />
+               <Double fx:value="-500.0" />
+               <Double fx:value="-243.0" />
+               <Double fx:value="-500.0" />
+               <Double fx:value="-400.0" />
+               <Double fx:value="0.0" />
+               <Double fx:value="-400.0" />
+           </points>
+       </Polygon>
+      <Text fx:id="Player0TextEndGame" fill="WHITE" layoutX="125.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winner !" textAlignment="CENTER" visible="false" wrappingWidth="186.177734375">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Text fx:id="Player1TextEndGame" fill="WHITE" layoutX="920.0" layoutY="446.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winner !" textAlignment="CENTER" visible="false" wrappingWidth="186.177734375">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
